--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-	text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&display=swap');
+
+
+/* -----------------------navbar section ------------------------ */
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.App-logo {
-	height: 40vmin;
-	pointer-events: none;
+body {
+	font-family: 'Roboto', sans-serif;
+	line-height: 1;
+	font-weight: 400;
+	overflow-x: hidden;
+	/* color: #616161; */
+	font-size: 24px;
+	color: #000000;
+	background: #f4f4f4;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
+::selection {
+	/* Change highlight background color to blue */
+	/* background: #494949; */
+	/* Change highlight text color to white */
+	color: #f4f4f4;
 }
 
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
-}
-
-.App-link {
-	color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
+a {
+	text-decoration: none;
+	color: inherit;
 }
